; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-gt683r.c_gt683r_led_snd_msg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-gt683r.c_gt683r_led_snd_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gt683r_led = type { i32 }

@GT683R_BUFFER_SIZE = common dso_local global i32 0, align 4
@HID_FEATURE_REPORT = common dso_local global i32 0, align 4
@HID_REQ_SET_REPORT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"failed to send set report request: %i\0A\00", align 1
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gt683r_led*, i32*)* @gt683r_led_snd_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gt683r_led_snd_msg(%struct.gt683r_led* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.gt683r_led*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.gt683r_led* %0, %struct.gt683r_led** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.gt683r_led*, %struct.gt683r_led** %4, align 8
  %8 = getelementptr inbounds %struct.gt683r_led, %struct.gt683r_led* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @GT683R_BUFFER_SIZE, align 4
  %15 = load i32, i32* @HID_FEATURE_REPORT, align 4
  %16 = load i32, i32* @HID_REQ_SET_REPORT, align 4
  %17 = call i32 @hid_hw_raw_request(i32 %9, i32 %12, i32* %13, i32 %14, i32 %15, i32 %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @GT683R_BUFFER_SIZE, align 4
  %20 = icmp ne i32 %18, %19
  br i1 %20, label %21, label %34

21:                                               ; preds = %2
  %22 = load %struct.gt683r_led*, %struct.gt683r_led** %4, align 8
  %23 = getelementptr inbounds %struct.gt683r_led, %struct.gt683r_led* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @hid_err(i32 %24, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %25)
  %27 = load i32, i32* %6, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %21
  %30 = load i32, i32* %6, align 4
  store i32 %30, i32* %3, align 4
  br label %35

31:                                               ; preds = %21
  %32 = load i32, i32* @EIO, align 4
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %3, align 4
  br label %35

34:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %34, %31, %29
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @hid_hw_raw_request(i32, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @hid_err(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
